--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
   .button:active{
     background-color: red;
   }
+
+ .image {
+ height: 300px;
+ width: 400px;
+ }
+
 </style>
 
 
 <button class="button">Hello</button>
+
+
+
+
+<img class="image" src="LARP.png" alt="LARP test thing lol">
